Remove ECO Scheme link

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <li>
                         <a
                             class="nav-link cta-button"
-                            href="https://calendly.com/grants-for-you/book-a-call"
+                            href="https://calendly.com/grants4you-temp/30min"
                         >
                             Book a call →
                         </a>
@@ -189,7 +189,7 @@
 
                 <a
                     class="cta-button-mobile"
-                    href="https://calendly.com/grants-for-you/book-a-call"
+                    href="https://calendly.com/grants4you-temp/30min"
                 >
                     <img
                         src="./images/phone.svg"
@@ -214,13 +214,9 @@
                         Warm up your home, boost its value and cut energy bills
                     </h1>
                     <p class="hero-text-first-paragraph">
-                        With the UK Government’s
-                        <a
-                            href="https://www.ofgem.gov.uk/environmental-and-social-schemes/energy-company-obligation-eco/homeowners-and-tenants"
-                            >ECO scheme</a
-                        >, enjoy free upgrades to make your home energy
-                        efficient. It’s our mission to make Britain greener —
-                        one home at a time.
+                        With the UK Government’s ECO scheme, enjoy free upgrades
+                        to make your home energy efficient. It’s our mission to
+                        make Britain greener — one home at a time.
                     </p>
                     <p>
                         Eligible households can access grants for heating,
