--- a/grants-available.html
+++ b/grants-available.html
@@ -145,7 +145,7 @@
                     <li>
                         <a
                             class="nav-link cta-button"
-                            href="https://calendly.com/grants-for-you/book-a-call"
+                            href="https://calendly.com/grants4you/30min"
                         >
                             Book a call →
                         </a>
@@ -154,7 +154,7 @@
 
                 <a
                     class="cta-button-mobile"
-                    href="https://calendly.com/grants-for-you/book-a-call"
+                    href="https://calendly.com/grants4you/30min"
                 >
                     <img
                         src="./images/phone.svg"
@@ -192,7 +192,7 @@
                         space into a haven of warmth and efficiency.
                     </p>
                     <a
-                        href="https://calendly.com/grants-for-you/book-a-call"
+                        href="https://calendly.com/grants4you/30min"
                         class="cta-button"
                         >Book a call →</a
                     >
@@ -219,7 +219,7 @@
                         the planet, one cozy home at a time.
                     </p>
                     <a
-                        href="https://calendly.com/grants-for-you/book-a-call"
+                        href="https://calendly.com/grants4you/30min"
                         class="cta-button"
                         >Book a call →</a
                     >
@@ -246,7 +246,7 @@
                         home.
                     </p>
                     <a
-                        href="https://calendly.com/grants-for-you/book-a-call"
+                        href="https://calendly.com/grants4you/30min"
                         class="cta-button"
                         >Book a call →</a
                     >
@@ -273,7 +273,7 @@
                         warmth.
                     </p>
                     <a
-                        href="https://calendly.com/grants-for-you/book-a-call"
+                        href="https://calendly.com/grants4you/30min"
                         class="cta-button"
                         >Book a call →</a
                     >
@@ -300,7 +300,7 @@
                         boosting your green credentials.
                     </p>
                     <a
-                        href="https://calendly.com/grants-for-you/book-a-call"
+                        href="https://calendly.com/grants4you/30min"
                         class="cta-button"
                         >Book a call →</a
                     >
@@ -328,7 +328,7 @@
                         released exactly when you need it.
                     </p>
                     <a
-                        href="https://calendly.com/grants-for-you/book-a-call"
+                        href="https://calendly.com/grants4you/30min"
                         class="cta-button"
                         >Book a call →</a
                     >
@@ -376,7 +376,7 @@
                         step.
                     </p>
                     <a
-                        href="https://calendly.com/grants-for-you/book-a-call"
+                        href="https://calendly.com/grants4you/30min"
                         class="cta-button"
                         >Book a call →</a
                     >
