--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <li>
                         <a
                             class="nav-link cta-button"
-                            href="https://calendly.com/grants4you-temp/30min"
+                            href="https://calendly.com/grants4you/30min"
                         >
                             Book a call →
                         </a>
@@ -189,7 +189,7 @@
 
                 <a
                     class="cta-button-mobile"
-                    href="https://calendly.com/grants4you-temp/30min"
+                    href="https://calendly.com/grants4you/30min"
                 >
                     <img
                         src="./images/phone.svg"
@@ -240,7 +240,7 @@
                     </p>
                     <div class="hero-grouping">
                         <a
-                            href="https://calendly.com/grants-for-you/book-a-call"
+                            href="https://calendly.com/grants4you/30min"
                             class="cta-button"
                             >Book a call →</a
                         >
@@ -325,7 +325,7 @@
                         step.
                     </p>
                     <a
-                        href="https://calendly.com/grants-for-you/book-a-call"
+                        href="https://calendly.com/grants4you/30min"
                         class="cta-button"
                         >Book a call →</a
                     >
