--- a/join-our-team.html
+++ b/join-our-team.html
@@ -148,7 +148,7 @@
                     <li>
                         <a
                             class="nav-link cta-button"
-                            href="https://calendly.com/grants-for-you/book-a-call"
+                            href="https://calendly.com/grants4you/30min"
                         >
                             Book a call →
                         </a>
@@ -157,7 +157,7 @@
 
                 <a
                     class="cta-button-mobile"
-                    href="https://calendly.com/grants-for-you/book-a-call"
+                    href="https://calendly.com/grants4you/30min"
                 >
                     <img
                         src="./images/phone.svg"
@@ -385,7 +385,7 @@
                         step.
                     </p>
                     <a
-                        href="https://calendly.com/grants-for-you/book-a-call"
+                        href="https://calendly.com/grants4you/30min"
                         class="cta-button"
                         >Book a call →</a
                     >
