--- a/upgrade-your-home-in-three-steps.html
+++ b/upgrade-your-home-in-three-steps.html
@@ -152,7 +152,7 @@
                     <li>
                         <a
                             class="nav-link cta-button"
-                            href="https://calendly.com/grants-for-you/book-a-call"
+                            href="https://calendly.com/grants4you/30min"
                         >
                             Book a call →
                         </a>
@@ -161,7 +161,7 @@
 
                 <a
                     class="cta-button-mobile"
-                    href="https://calendly.com/grants-for-you/book-a-call"
+                    href="https://calendly.com/grants4you/30min"
                 >
                     <img
                         src="./images/phone.svg"
@@ -210,7 +210,7 @@
                             energy-efficient at no cost.
                         </p>
                         <a
-                            href="https://calendly.com/grants-for-you/book-a-call"
+                            href="https://calendly.com/grants4you/30min"
                             class="cta-button"
                             >Book your call now →</a
                         >
@@ -312,7 +312,7 @@
                         step.
                     </p>
                     <a
-                        href="https://calendly.com/grants-for-you/book-a-call"
+                        href="https://calendly.com/grants4you/30min"
                         class="cta-button"
                         >Book a call →</a
                     >
