--- a/get-in-touch.html
+++ b/get-in-touch.html
@@ -141,7 +141,7 @@
                     <li>
                         <a
                             class="nav-link cta-button"
-                            href="https://calendly.com/grants-for-you/book-a-call"
+                            href="https://calendly.com/grants4you/30min"
                         >
                             Book a call →
                         </a>
@@ -150,7 +150,7 @@
 
                 <a
                     class="cta-button-mobile"
-                    href="https://calendly.com/grants-for-you/book-a-call"
+                    href="https://calendly.com/grants4you/30min"
                 >
                     <img
                         src="./images/phone.svg"
@@ -324,7 +324,7 @@
                         step.
                     </p>
                     <a
-                        href="https://calendly.com/grants-for-you/book-a-call"
+                        href="https://calendly.com/grants4you/30min"
                         class="cta-button"
                         >Book a call →</a
                     >
