--- a/thank-you-for-getting-in-touch-with-us.html
+++ b/thank-you-for-getting-in-touch-with-us.html
@@ -140,7 +140,7 @@
                     <li>
                         <a
                             class="nav-link cta-button"
-                            href="https://calendly.com/grants-for-you/book-a-call"
+                            href="https://calendly.com/grants4you/30min"
                         >
                             Book a call →
                         </a>
@@ -149,7 +149,7 @@
 
                 <a
                     class="cta-button-mobile"
-                    href="https://calendly.com/grants-for-you/book-a-call"
+                    href="https://calendly.com/grants4you/30min"
                 >
                     <img
                         src="./images/phone.svg"
