--- a/join-our-team.html
+++ b/join-our-team.html
@@ -309,7 +309,7 @@
                         Interested in working with us? Start by applying here!
                     </h3>
                     <form
-                        action="work-application"
+                        action="https://g4u-backend.onrender.com/work-application"
                         method="POST"
                     >
                         <div class="layout-container">
